# QBDI_task

./: CMakeLists.txt  README.md  script.sh  task1.cpp
